Unit tests minor issue fixed